fix: address PR review feedback for breadcrumbs alignment
- Add enum constraint to contentJustification in block.json
- Guard against undefined on JustifyContentControl deselect
- Add in_array() allowlist validation in render.php
- Add text-align to wrapper so prefix tracks justification

--- a/src/blocks/breadcrumbs/style.scss
+++ b/src/blocks/breadcrumbs/style.scss
@@ -20,12 +20,20 @@
     }
 
     // Content justification
-    &.is-content-justification-center .dsgo-breadcrumbs__list {
-        justify-content: center;
+    &.is-content-justification-center {
+        text-align: center;
+
+        .dsgo-breadcrumbs__list {
+            justify-content: center;
+        }
     }
 
-    &.is-content-justification-right .dsgo-breadcrumbs__list {
-        justify-content: flex-end;
+    &.is-content-justification-right {
+        text-align: right;
+
+        .dsgo-breadcrumbs__list {
+            justify-content: flex-end;
+        }
     }
 
     // Breadcrumb list
